<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">


    <EditText
        android:id="@+id/first_name"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/last_name"
        style="@style/viewCustom"
        android:layout_below="@id/first_name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/email"
        style="@style/viewCustom"
        android:ems="10"
        android:layout_below="@id/last_name"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/password"
        style="@style/viewCustom"
        android:layout_below="@id/email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/btn_register"
        style="@style/viewCustom"
        android:layout_below="@id/password"
        android:background="@color/colorAccent"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</RelativeLayout>

