<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/email"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/password"
        style="@style/viewCustom"
        android:layout_below="@id/email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/btn_login"
        style="@style/viewCustom"
        android:layout_below="@id/password"
        android:background="@color/colorAccent"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/forgot_password"
        style="@style/viewCustom"
        android:layout_below="@id/btn_login"
        android:background="@color/colorAccent"
        android:text="Forgot Password?"

        android:textColor="@android:color/white"
        android:textStyle="bold" />
<!--    <TextView-->
<!--        android:id="@+id/tv_forgot_password"-->
<!--        style="@style/viewCustom"-->
<!--        android:layout_below="@id/btn_login"-->
<!--        android:clickable="true"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:text="Forgot Password?"-->
<!--        android:textSize="20sp" />-->
    <Button
        android:id="@+id/btn_register_account"
        style="@style/viewCustom"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</RelativeLayout>